# -ChisinauRouting

./: .gitignore  DEPLOY.md  README.md  README.txt  START.bat  START_FULL.bat  START_MAP.bat  START_SIMPLE.bat  STOP_MAP.bat  cleanup_connections.bat  render.yaml  routing.bat  test_db.py  ИНСТРУКЦИЯ.txt  ИНСТРУКЦИЯ_2.txt
android/ChisinauNav/: build.gradle.kts  settings.gradle.kts
android/ChisinauNav/app/: build.gradle.kts
android/ChisinauNav/app/src/main/: AndroidManifest.xml
android/ChisinauNav/app/src/main/java/md/chisinau/nav/: ChisinauNavApp.kt
android/ChisinauNav/app/src/main/java/md/chisinau/nav/api/: ApiModule.kt  RoutingApi.kt  RoutingRepository.kt
android/ChisinauNav/app/src/main/java/md/chisinau/nav/data/: Models.kt
android/ChisinauNav/app/src/main/java/md/chisinau/nav/ui/: MainActivity.kt  MapViewModel.kt
android/ChisinauNav/app/src/main/res/drawable/: bg_bottom_sheet.xml  bg_drag_handle.xml
android/ChisinauNav/app/src/main/res/layout/: activity_main.xml
android/ChisinauNav/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
database/: init.sql  setup_instructions.md
docker/: Dockerfile.ingestion  Dockerfile.routing  docker-compose.yml
ingestion/: clicker_log.txt  config.py  dashboard.py  gtfsrt_worker.py  osm_extractor.py  requirements.txt  simple_dashboard.py  test_final.py  test_mqtt.py  test_roataway_connection.py  test_simulator.py  tomtom_worker.py  traffic_engine.py  trolleybus_simulator.py
routing_core/: CMakeLists.txt  build.bat
routing_core/include/: astar.hpp  db_loader.hpp  graph.hpp  map_matcher.hpp  weight_manager.hpp
routing_core/proto/: routing.proto
routing_core/src/: astar.cpp  db_loader.cpp  graph.cpp  grpc_server.cpp  main.cpp  map_matcher.cpp  rest_server.cpp  weight_manager.cpp
webapp/: Procfile  algorithms.py  app.py  requirements.txt
webapp/templates/: index.html
